--- a/src/components/AboutUs/CoreValues.css
+++ b/src/components/AboutUs/CoreValues.css
@@ -4,13 +4,15 @@
   right: 0;
   bottom: 0;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background-color: #f5f5f5;
+  position: relative;
   width: 100%;
 }
 
 .about-buttons button {
+  width: 18rem;
   padding: 0.5rem 3rem;
   font-size: 1.5rem;
   color: #03435f;
@@ -26,19 +28,26 @@
 }
 
 .dropdown-content {
+  margin-top: 16rem;
   position: absolute;
-  margin-top: 15rem;
-  /* left: 50%; */
-  /* transform: translateX(-50%); */
   display: none;
+  z-index: 1;
+  width: fit-content;
 }
 
 .show-dropdown {
   display: block;
 }
 
+.about-button {
+  display: flex;
+  width: 18rem;
+  justify-content: center;
+}
+
 .dropdown-content-buttons {
-  width: 100%;
+  width: 18rem;
+  margin: 2.8rem auto 0 auto;
   padding: 0;
   font-size: 1rem;
   color: #03435f;
@@ -47,6 +56,8 @@
   transition: background-color 0.3s ease;
   display: flex;
   flex-direction: column;
+  position: absolute;
+  z-index: 999;
 }
 
 .dropdown-content-buttons:hover {
@@ -55,8 +66,10 @@
 
 .dropdown-content-buttons button {
   width: 100%;
-  text-align: left;
-  font-size: small;
+  margin: auto;
+  text-align: center;
+  font-size: 0.9rem;
+  padding: 0.5rem 1rem;
 }
 
 .modal-container {
@@ -73,26 +86,42 @@
 }
 
 .modal {
-  width: 60%;
+  width: 25%;
+  max-height: 80%;
+  overflow-y: auto;
   background-color: #fff;
   padding: 1rem;
   border-radius: 8px;
   position: relative;
+  text-align: center;
 }
 
-.close-button {
+.close-button button {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 1.2rem;
-  background: none;
-  border: none;
-  color: #fff;
+  top: -0.2rem;
+  right: 1.2rem;
+  background-color: #fff;
   cursor: pointer;
+  font-size: 1.5rem;
+  width: 0.5rem;
+  height: 0.5rem;
+  padding: 0.5rem 0.5rem;
+  color: #03435f;
+  cursor: pointer;
+}
+
+.close-button button:hover {
+    background: none;
+    color: red;
 }
 
 .content {
   padding: 1rem;
+  margin-top: -1rem;
+}
+
+.bold {
+  font-weight: bolder;  
 }
 
 .vision,
