--- a/src/components/AboutUs/AboutUs2.css
+++ b/src/components/AboutUs/AboutUs2.css
@@ -14,18 +14,18 @@
   }
 
   .two-h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     color: #03435f;
-    margin-top: 1rem;
+    margin-top: -0.2rem;
     margin-bottom: -0.2rem;
-    text-align: center;
+    text-align: left;
   }
 
   .info p {
     text-align: left;
   }
   
-  .content {
+  .history {
     display: flex;
     flex-direction: row;
     width: 90%;
@@ -35,14 +35,14 @@
     flex: 1;
     margin: 2rem;
     margin-left: 1rem;
-    font-size: 1.38rem;
+    font-size: 1.35rem;
     color: #212529;
   }
   
   .video {
     flex: 1;
     position: relative;
-    margin-top: 0.5rem;
+    margin-top: 1.5rem;
     max-height: 30vh;
   }
   
