--- a/src/components/AboutUs/AboutUs4.css
+++ b/src/components/AboutUs/AboutUs4.css
@@ -29,7 +29,7 @@
   height: 80%;
   text-align: center;
   padding: 1rem;
-  background-color: #f5f5f5;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(50deg, #FFE450 0%, #D5A848 90%);
   border-radius: 8px;
   margin: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
